WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24577
Fix layout test for v8: LayoutTests/fast/events/onload-single-line-comment.html
https://bugs.webkit.org/show_bug.cgi?id=24577
Summary
Fix layout test for v8: LayoutTests/fast/events/onload-single-line-comment.html
Mike Belshe
Reported
2009-03-13 10:23:06 PDT
Event handlers with trailing comments fail.
Attachments
patch
(2.54 KB, patch)
2009-03-13 17:10 PDT
,
Mike Belshe
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Belshe
Comment 1
2009-03-13 17:10:52 PDT
Created
attachment 28615
[details]
patch
Mike Belshe
Comment 2
2009-03-13 17:13:48 PDT
In reviewing my patch, I discovered that someone else fixed the bug in parallel. This patch is a little better in that it consolidates the code.append()s into fewer calls.
Darin Fisher (:fishd, Google)
Comment 3
2009-03-13 17:14:46 PDT
Comment on
attachment 28615
[details]
patch LGTM
David Levin
Comment 4
2009-03-20 15:49:14 PDT
Assign to levin for landing.
David Levin
Comment 5
2009-03-20 16:57:12 PDT
Committed as
r41880
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug