2009-03-20  Mike Belshe <mike@belshe.com>

Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=24577

        Don't let comments at the end of an event handler
        break the event handler.

        No change in behavior, so no test.

        * bindings/v8/V8LazyEventListener.cpp:
        (WebCore::V8LazyEventListener::getWrappedListenerFunction):

Canonical link: https://commits.webkit.org/33937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41880 268f45cc-cd09-0410-ab3c-d52691b4dbfc